# azure-image-gouvernance-auditor

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-function.yml
infra/: main.tf  outputs.tf  variables.tf  versions.tf
src/azimg_auditor/: cli.py  config.py
src/azimg_auditor/azure/: resource_graph.py
src/azimg_auditor/governance/: __init__.py  engine.py  rules.yaml
src/azimg_auditor/pipeline/: step1_inventory.py
src/azimg_auditor/report/: blob_writer.py  findings_writer.py  writers.py
src/azimg_auditor/utils/: log.py
src/function_app/: function_app.py  requirements.functions.txt
tests/: test_classification.py
