[project]
name = "azimg-auditor"
version = "0.1.0"
description = "Azure Image Governance Auditor - inventory and compliance reporting for VM image usage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "azure-identity>=1.16.0",
  "azure-mgmt-resourcegraph>=8.0.0",
  "azure-mgmt-resource>=23.0.1",
  "typer>=0.12.3",
]

[project.scripts]
azimg = "azimg_auditor.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100